test/reverseCapture2.slq
// args: --run

def foo(f: ğ”¹ â†’mfree ğ”¹){ /// error
	x:=rotX(Ï€/3,0);
	x:=reverse(f)(x);
	return x;
}
def main(){
	x:=foo((x:ğ”¹)â‡’rotX(Ï€/3,x));
	assert(!measure(dup(x)));
	return x;
}
